--- a/web/views/index/hedit.html
+++ b/web/views/index/hedit.html
@@ -15,7 +15,7 @@
                     </div>
                     <div class="form-group">
                         <label class="control-label">客户端id</label>
-                        <input class="form-control" value="{{.h.ClientId}}" type="text" name="client_id"
+                        <input class="form-control" value="{{.h.Client.Id}}" type="text" name="client_id"
                                placeholder="客户端id">
                     </div>
                     <div class="form-group">
