--- a/web/views/client/edit.html
+++ b/web/views/client/edit.html
@@ -7,7 +7,7 @@
                     <input type="hidden" name="Id" value="{{.c.Id}}">
                     <div class="form-group" id="target">
                         <label class="control-label">备注</label>
-                        <input class="form-control" value="{{.c.Remark}}" type="text" name="Remark" placeholder="客户端备注">
+                        <input class="form-control" value="{{.c.Remark}}" type="text" name="remark" placeholder="客户端备注">
                     </div>
                     <div class="form-group" id="flow_limit">
                         <label class="control-label">流量限制(单位：M，为空不限制)</label>
