--- a/web/views/client/list.html
+++ b/web/views/client/list.html
@@ -114,7 +114,7 @@
                     autoWidth: false,
                     ordering: false,
                     ajax: {
-                        url: '/client/client',
+                        url: '/client/list',
                         type: 'POST'
                     },
                     dom: '<"top"fl><"toolbar">rt<"bottom"ip><"clear">',
