--- a/web/views/public/layout.html
+++ b/web/views/public/layout.html
@@ -42,7 +42,7 @@
     <ul class="app-menu">
         <li><a class="app-menu__item {{if eq "index" .menu}}active{{end}}" href="/"><i
                 class="app-menu__icon fa fa-dashboard"></i><span class="app-menu__label">dashboard</span></a></li>
-        <li><a class="app-menu__item {{if eq "client" .menu}}active{{end}}" href="/client/client"><i
+        <li><a class="app-menu__item {{if eq "client" .menu}}active{{end}}" href="/client/list"><i
                 class="app-menu__icon fa fa-dot-circle-o"></i><span class="app-menu__label">客户端管理</span></a></li>
         <li><a class="app-menu__item {{if eq "host" .menu}}active{{end}}" href="/index/hostlist"><i
                 class="app-menu__icon fa fa-lemon-o"></i><span class="app-menu__label">域名代理</span></a></li>
