--- a/web/views/client/add.html
+++ b/web/views/client/add.html
@@ -6,7 +6,7 @@
                 <form>
                     <div class="form-group" id="target">
                         <label class="control-label">备注</label>
-                        <input class="form-control" type="text" name="Remark" placeholder="客户端备注">
+                        <input class="form-control" type="text" name="remark" placeholder="客户端备注">
                     </div>
                     <div class="form-group" id="flow_limit">
                         <label class="control-label">流量限制(单位：M，为空不限制)</label>
