--- a/web/views/client/edit.html
+++ b/web/views/client/edit.html
@@ -4,7 +4,7 @@
             <h3 class="tile-title">添加</h3>
             <div class="tile-body">
                 <form>
-                    <input type="hidden" name="Id" value="{{.c.Id}}">
+                    <input type="hidden" name="id" value="{{.c.Id}}">
                     <div class="form-group" id="target">
                         <label class="control-label">备注</label>
                         <input class="form-control" value="{{.c.Remark}}" type="text" name="remark" placeholder="客户端备注">
