https 、客户端与服务端连接优化

--- a/web/views/index/help.html
+++ b/web/views/index/help.html
@@ -26,26 +26,16 @@
             </p>
             <p><b>使用步骤：</b></p>
             <ul>
-                <li>将a.proxy.com，b.proxy.com解析到公网服务器{{.ip}}</li>
-                <li>使用nginx监听这两个个域名，并配置ssl等……</li>
-                <li>在nginx配置中添加反向代理（或直接将http监听端口改为80）<br>
-                    <pre><code>
-                    server {
-                        listen 80;
-                        server_name a.proxy.com b.proxy.com;#也可以是泛解析*.proxy.com
-                        #ssl等配置
-                        <b>location / {
-                            proxy_pass http://127.0.0.1:{{.proxyPort}};
-                        }</b>
-                    }
-                        </code></pre>
-                </li>
-                <li>在域名代理管理中添加一个客户端，选择压缩方式，保存。 <a href="/index/add?type=hostServer">立即添加</a></li>
-            {{/*<li>在域名代理管理中找到新加的客户端(查看其vkey或者客户端命令)，任意内网机器执行客户端命令</li>*/}}
+                <li>将*.proxy.com解析到公网服务器{{.ip}}</li>
+                <li>在客户端管理中创建一个客户端，记录下验证密钥</li>
                 <li>点击该客户端的域名管理，添加两条规则规则：1、域名：a.proxy.com，内网目标：127.0.0.1:81，2、域名：b.proxy.com，内网目标：127.0.0.1:82</li>
+                <li>内网客户端运行<code>
+                    <pre>./proxy_client server={{.ip}}:{{.p}} -vkey=客户端的密钥</pre>
+                </code></pre></li>
                 <li>现在访问a.proxy.com，b.proxy.com即可成功</li>
             </ul>
-            <p>注：上文中提到公网ip（{{.ip}}）为系统自动识别，如果是在测试环境中请自行对应，默认内网客户端已经启动</p>
+            <p>注：上文中提到公网ip（{{.ip}}）为系统自动识别，如果是在测试环境中请自行对应，<b>如需使用https请在配置文件中将https端口设置为443，和将对应的证书文件路径添加到配置文件中
+            </b></p>
         </div>
     </div>
 </div>
@@ -61,10 +51,13 @@
             </p>
             <p><b>使用步骤：</b></p>
             <ul>
-                <li>在tcp隧道管理中添加一条隧道，填写监听的端口（8001）、内网目标ip和目标端口（10.1.50.101:22），选择压缩方式，保存。 <a
-                        href="/index/add?type=tunnelServer">立即添加</a></li>
-            {{/*<li>在tcp管理列表中找到新加的隧道(查看其vkey或者客户端命令)，任意内网机器执行客户端命令</li>*/}}
-                <li>访问公网服务器ip（{{.ip}}）:填写的监听端口(8001)，相当于访问内网ip(10.1.50.101):目标端口(22)，例如：ssh -p 8001 root@{{.ip}}</li>
+                <li>在客户端管理中创建一个客户端，记录下验证密钥</li>
+                <li>内网客户端运行<code>
+                    <pre>./proxy_client server={{.ip}}:{{.p}} -vkey=客户端的密钥</pre>
+                </code></pre>
+                </li>
+                <li>在该客户端隧道管理中添加一条tcp隧道，填写监听的端口（8001）、内网目标ip和目标端口（10.1.50.101:22），选择压缩方式，保存。</li>
+                <li>访问公网服务器ip（{{.ip}}）,填写的监听端口(8001)，相当于访问内网ip(10.1.50.101):目标端口(22)，例如：ssh -p 8001 root@{{.ip}}</li>
             </ul>
             <p>注：上文中提到公网ip（{{.ip}}）为系统自动识别，如果是在测试环境中请自行对应，默认内网客户端已经启动</p>
         </div>
@@ -80,9 +73,12 @@
             </p>
             <p><b>使用步骤：</b></p>
             <ul>
-                <li>在udp隧道管理中添加一条隧道，填写监听的端口（8002）、内网目标ip和目标端口（10.1.50.102:53），选择压缩方式，保存。 <a
-                        href="/index/add?type=udpServer">立即添加</a></li>
-            {{/*<li>在udp管理列表中找到新加的隧道(查看其vkey或者客户端命令)，任意内网机器执行客户端命令</li>*/}}
+                <li>在客户端管理中创建一个客户端，记录下验证密钥</li>
+                <li>内网客户端运行<code>
+                    <pre>./proxy_client server={{.ip}}:{{.p}} -vkey=客户端的密钥</pre>
+                </code></pre>
+                </li>
+                <li>在该客户端的隧道管理中添加一条udp隧道，填写监听的端口（53）、内网目标ip和目标端口（10.1.50.102:53），选择压缩方式，保存。</li>
                 <li>修改本机dns为{{.ip}}，则相当于使用10.1.50.202作为dns服务器</li>
             </ul>
             <p>注：上文中提到公网ip（{{.ip}}）为系统自动识别，如果是在测试环境中请自行对应，默认内网客户端已经启动</p>
@@ -101,9 +97,12 @@
             </p>
             <p><b>使用步骤：</b></p>
             <ul>
-                <li>在socks5隧道管理中添加一条隧道，填写监听的端口（8003），验证用户名和密码自行选择（建议先不填，部分客户端不支持，proxifer支持），选择压缩方式，保存。 <a
-                        href="/index/add?type=sock5Server">立即添加</a></li>
-            {{/*<li>在socks5代理管理列表中找到新加的隧道(查看其vkey或者客户端命令)，任意内网机器执行客户端命令</li>*/}}
+                <li>在客户端管理中创建一个客户端，记录下验证密钥</li>
+                <li>内网客户端运行<code>
+                    <pre>./proxy_client server={{.ip}}:{{.p}} -vkey=客户端的密钥</pre>
+                </code></pre>
+                </li>
+                <li>在该客户端隧道管理中添加一条socks5代理，填写监听的端口（8003），验证用户名和密码自行选择（建议先不填，部分客户端不支持，proxifer支持），选择压缩方式，保存。</li>
                 <li>在外网环境的本机配置socks5代理，ip为公网服务器ip（{{.ip}}），端口为填写的监听端口(8003)，即可畅享内网了</li>
             </ul>
             <p>注：上文中提到公网ip（{{.ip}}）为系统自动识别，如果是在测试环境中请自行对应，默认内网客户端已经启动</p>
@@ -120,13 +119,23 @@
             </p>
             <p><b>使用步骤：</b></p>
             <ul>
-                <li>在http隧道管理中添加一条隧道，填写监听的端口（8004），选择压缩方式，保存。 <a
-                        href="/index/add?type=httpProxyServer">立即添加</a></li>
-                <li>在http代理管理列表中找到新加的隧道(查看其vkey或者客户端命令)，任意内网机器执行客户端命令</li>
+                <li>在客户端管理中创建一个客户端，记录下验证密钥</li>
+                <li>内网客户端运行<code>
+                    <pre>./proxy_client server={{.ip}}:{{.p}} -vkey=客户端的密钥</pre>
+                </code></pre>
+                </li>
+                <li>在该客户端隧道管理中添加一条http代理，填写监听的端口（8004），选择压缩方式，保存。</li>
                 <li>在外网环境的本机配置http代理，ip为公网服务器ip（{{.ip}}），端口为填写的监听端口(8004)，即可访问了</li>
             </ul>
             <p>注：上文中提到公网ip（{{.ip}}）为系统自动识别，如果是在测试环境中请自行对应，默认内网客户端已经启动</p>
         </div>
     </div>
+    <div class="col-md-12">
+        <div class="tile">
+            <p><b>单个客户端可以田间多条隧道或者域名解析</b></p>
+        </div>
+    </div>
 </div>
+
+
 </main>
