--- a/web/views/index/help.html
+++ b/web/views/index/help.html
@@ -1,11 +1,11 @@
 <div class="row">
     <div class="col-md-12">
         <div class="tile">
-            <iframe src="https://ghbtns.com/github-btn.html?user=cnlh&repo=easyProxy&type=star&count=true&size=large"
+            <iframe src="https://ghbtns.com/github-btn.html?user=cnlh&repo=nps&type=star&count=true&size=large"
                     frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
-            <iframe src="https://ghbtns.com/github-btn.html?user=cnlh&repo=easyProxy&type=watch&count=true&size=large&v=2"
+            <iframe src="https://ghbtns.com/github-btn.html?user=cnlh&repo=nps&type=watch&count=true&size=large&v=2"
                     frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
-            <iframe src="https://ghbtns.com/github-btn.html?user=cnlh&repo=easyProxy&type=fork&count=true&size=large"
+            <iframe src="https://ghbtns.com/github-btn.html?user=cnlh&repo=nps&type=fork&count=true&size=large"
                     frameborder="0" scrolling="0" width="158px" height="30px"></iframe>
         </div>
     </div>
@@ -30,7 +30,7 @@
                 <li>在客户端管理中创建一个客户端，记录下验证密钥</li>
                 <li>点击该客户端的域名管理，添加两条规则规则：1、域名：a.proxy.com，内网目标：127.0.0.1:81，2、域名：b.proxy.com，内网目标：127.0.0.1:82</li>
                 <li>内网客户端运行<code>
-                    <pre>./proxy_client server={{.ip}}:{{.p}} -vkey=客户端的密钥</pre>
+                    <pre>./npc server={{.ip}}:{{.p}} -vkey=客户端的密钥</pre>
                 </code></pre></li>
                 <li>现在访问a.proxy.com，b.proxy.com即可成功</li>
             </ul>
@@ -53,7 +53,7 @@
             <ul>
                 <li>在客户端管理中创建一个客户端，记录下验证密钥</li>
                 <li>内网客户端运行<code>
-                    <pre>./proxy_client server={{.ip}}:{{.p}} -vkey=客户端的密钥</pre>
+                    <pre>./npc server={{.ip}}:{{.p}} -vkey=客户端的密钥</pre>
                 </code></pre>
                 </li>
                 <li>在该客户端隧道管理中添加一条tcp隧道，填写监听的端口（8001）、内网目标ip和目标端口（10.1.50.101:22），选择压缩方式，保存。</li>
@@ -75,7 +75,7 @@
             <ul>
                 <li>在客户端管理中创建一个客户端，记录下验证密钥</li>
                 <li>内网客户端运行<code>
-                    <pre>./proxy_client server={{.ip}}:{{.p}} -vkey=客户端的密钥</pre>
+                    <pre>./npc server={{.ip}}:{{.p}} -vkey=客户端的密钥</pre>
                 </code></pre>
                 </li>
                 <li>在该客户端的隧道管理中添加一条udp隧道，填写监听的端口（53）、内网目标ip和目标端口（10.1.50.102:53），选择压缩方式，保存。</li>
@@ -99,7 +99,7 @@
             <ul>
                 <li>在客户端管理中创建一个客户端，记录下验证密钥</li>
                 <li>内网客户端运行<code>
-                    <pre>./proxy_client server={{.ip}}:{{.p}} -vkey=客户端的密钥</pre>
+                    <pre>./npc server={{.ip}}:{{.p}} -vkey=客户端的密钥</pre>
                 </code></pre>
                 </li>
                 <li>在该客户端隧道管理中添加一条socks5代理，填写监听的端口（8003），验证用户名和密码自行选择（建议先不填，部分客户端不支持，proxifer支持），选择压缩方式，保存。</li>
@@ -121,7 +121,7 @@
             <ul>
                 <li>在客户端管理中创建一个客户端，记录下验证密钥</li>
                 <li>内网客户端运行<code>
-                    <pre>./proxy_client server={{.ip}}:{{.p}} -vkey=客户端的密钥</pre>
+                    <pre>./npc server={{.ip}}:{{.p}} -vkey=客户端的密钥</pre>
                 </code></pre>
                 </li>
                 <li>在该客户端隧道管理中添加一条http代理，填写监听的端口（8004），选择压缩方式，保存。</li>
