安装 守护进程优化 web修改

--- a/web/views/index/edit.html
+++ b/web/views/index/edit.html
@@ -1,7 +1,7 @@
 <div class="row tile">
     <div class="col-md-6 col-md-auto">
         <div>
-            <h3 class="tile-title">添加</h3>
+            <h3 class="tile-title">修改</h3>
             <div class="tile-body">
                 <form>
                     <input type="hidden" name="id" value="{{.t.Id}}">
