--- a/web/views/index/hadd.html
+++ b/web/views/index/hadd.html
@@ -20,7 +20,7 @@
                     <div class="form-group">
                         <label class="control-label">内网目标</label>
                         <textarea class="form-control" rows="4" type="text" name="target"
-                                  placeholder="内网隧道目标，例如10.1.50.203:22，换行分隔"></textarea>
+                                  placeholder="内网隧道目标，例如10.1.50.203:22，如需负载均衡多个地址换行分隔"></textarea>
                     </div>
                     <div class="form-group" id="header">
                         <label class="control-label">header头修改(冒号分隔，多个请换行填写)</label>
