--- a/web/views/login/index.html
+++ b/web/views/login/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="/static/css/main.css">
     <!-- Font-icon css-->
     <link rel="stylesheet" type="text/css" href="/static/css/font-awesome.min.css">
-    <title>easyProxy内网穿透</title>
+    <title>nps内网穿透</title>
 </head>
 <body>
 <section class="material-half-bg">
