--- a/web/views/public/layout.html
+++ b/web/views/public/layout.html
@@ -4,7 +4,7 @@
     <meta name="description"
           content="Vali is a responsive and free admin theme built with Bootstrap 4, SASS and PUG.js. It's fully customizable and modular.">
     <link rel="shortcut icon" href="/static/img/favicon.ico">
-    <title>easyProxy内网穿透</title>
+    <title>nps内网穿透</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -61,7 +61,7 @@
 
 <script type="text/javascript" src="/static/js/datatables.min.js"></script>
 <script src="/static/js/main.js"></script>
-<script src="/static/js/chart.js"></script>
+<script src="/static/js/echarts.min.js"></script>
 <main class="app-content">
     <div class="app-title">
         <div>
