客户端配置，端口白名单等

--- a/web/views/index/edit.html
+++ b/web/views/index/edit.html
@@ -21,7 +21,7 @@
                     </div>
                     <div class="form-group" id="port">
                         <label class="control-label">监听的端口</label>
-                        <input class="form-control" value="{{.t.TcpPort}}" type="text" name="port"
+                        <input class="form-control" value="{{.t.Port}}" type="text" name="port"
                                placeholder="公网服务器对外访问端口，例如8024">
                     </div>
                     <div class="form-group" id="target">
@@ -33,37 +33,6 @@
                         <label class="control-label">客户端ID</label>
                         <input class="form-control" value="{{.t.Client.Id}}" type="text" name="client_id"
                                placeholder="客户端id">
-                    </div>
-                    <div class="form-group" id="use_client">
-                        <label class="control-label">是否使用客户端配置</label>
-                        <select class="form-control" name="use_client">
-                            <option {{if eq false .t.UseClientCnf}}selected{{end}} value="0">否</option>
-                            <option {{if eq  true .t.UseClientCnf}}selected{{end}} value="1">是</option>
-                        </select>
-                    </div>
-                    <div class="form-group" id="compress">
-                        <label class="control-label">数据压缩方式(所有模式均支持)</label>
-                        <select class="form-control" name="compress">
-                            <option {{if eq "" .t.Config.Compress}}selected{{end}} value="">不压缩</option>
-                            <option {{if eq "snappy" .t.Config.Compress}}selected{{end}} value="snappy">snappy压缩</option>
-                        </select>
-                    </div>
-                    <div class="form-group" id="crypt">
-                        <label class="control-label">是否加密传输(所有模式均支持)</label>
-                        <select class="form-control" name="crypt">
-                            <option {{if eq false .t.Config.Crypt}}selected{{end}} value="0">不加密</option>
-                            <option {{if eq  true .t.Config.Crypt}}selected{{end}} value="1">加密</option>
-                        </select>
-                    </div>
-                    <div class="form-group" id="u">
-                        <label class="control-label">验证用户名(仅socks5,web穿透支持)</label>
-                        <input class="form-control" value="{{.t.Config.U}}" type="text" name="u"
-                               placeholder="不填则无需验证">
-                    </div>
-                    <div class="form-group" id="p">
-                        <label class="control-label">验证密码(仅socks5,web穿透支持)</label>
-                        <input class="form-control" value="{{.t.Config.P}}" type="text" name="p"
-                               placeholder="不填则无需验证">
                     </div>
                 </form>
             </div>
