--- a/web/views/index/help.html
+++ b/web/views/index/help.html
@@ -132,7 +132,7 @@
     </div>
     <div class="col-md-12">
         <div class="tile">
-            <p><b>单个客户端可以田间多条隧道或者域名解析</b></p>
+            <p><b>单个客户端可以添加多条隧道或者域名解析</b></p>
         </div>
     </div>
 </div>
